# revancedbot

./: .gitignore  experimentation.ipynb  mise.toml  pyproject.toml  versions_example.txt
.github/workflows/: update-apps.yaml
revancedbot/: __init__.py
