[project]
name = "revancedbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "fdroidserver>=2.4.2",
    "pygithub>=2.8.1",
    "requests>=2.32.5",
    "selenium>=4.35.0",
    "tqdm>=4.67.1",
]

[project.scripts]
repatcher = "revancedbot:run_patcher"

[tool.uv]
package = true
